--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
     "jest": "26.6.0",
+    "jest-fetch-mock": "^3.0.3",
+    "node-fetch": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
@@ -62,5 +64,11 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "jest": "^27.2.5",
     "prettier": "^2.4.1"
+  },
+  "jest": {
+    "automock": false,
+    "setupFiles": [
+      "./setupJest.js"
+    ]
   }
 }
