--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
-    "jest": "26.6.0",
+    "jest": "^27.2.5",
     "jest-fetch-mock": "^3.0.3",
     "node-fetch": "^3.0.0",
     "react": "^17.0.2",
