--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^1.7.0",
     "jest": "^27.2.5",
+    "babel-preset-env": "7.1",
     "prettier": "^2.4.1"
   },
   "jest": {
